--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
+  },
+  "engines": {
+    "node": "16.10.0"
   }
 }
